refactoring and puzzle init

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 class="text-3xl font-extrabold text-gray-800 mb-4">AI Problems</h1>
             <div class="flex space-x-4">
                 <button class="px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-150">
-                    Knight (Salto de Caballo)
+                    Knight Tour (Salto de Caballo)
                 </button>
                 <button class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150 cursor-not-allowed">
                     Puzzle
@@ -47,7 +47,6 @@
                     <button id="solveButton" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
                         Solve
                     </button>
-                    <p>Un origen diferente a 0,0 puede hacer tardar mucho o no enceontrar solucion.</p>
                 </div>
 
                 <div id="statusMessage" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
@@ -73,6 +72,6 @@
         </main>
     </div>
 
-    <script type="module" src="./Knights/app.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
