--- a/index.html
+++ b/index.html
@@ -13,61 +13,109 @@
         <header class="mb-8 p-4 bg-white shadow-lg rounded-xl">
             <h1 class="text-3xl font-extrabold text-gray-800 mb-4">AI Problems</h1>
             <div class="flex space-x-4">
-                <button class="px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-150">
-                    Knight Tour (Salto de Caballo)
-                </button>
-                <button class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150 cursor-not-allowed">
-                    Puzzle
-                </button>
-                <button class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150 cursor-not-allowed">
-                    Maze
-                </button>
+            <button id="knight-tour-btn" class="px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-150"> 
+                Knight Tour (Salto de Caballo) 
+            </button> 
+            <button id="puzzle-btn" class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150"> 
+                Puzzle 
+            </button> 
+            <button id="maze-btn" class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150"> 
+                Maze 
+            </button> 
             </div>
         </header>
 
-        <main class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
-            <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
-                <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Settings</h2>
-                <div id="controls-form" class="space-y-4">
-                    <div>
-                        <label for="boardSize" class="block text-sm font-medium text-gray-700">Board Size (Tamaño)</label>
-                        <input type="number" id="boardSize" value="8" min="5" max="10" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
+        <main class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6"> 
+            <section id="knight-tour-section" class="problem-section flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
+                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Settings</h2>
+                    <div id="controls-form" class="space-y-4">
+                        <div>
+                            <label for="boardSize" class="block text-sm font-medium text-gray-700">Board Size (Tamaño)</label>
+                            <input type="number" id="boardSize" value="8" min="5" max="10" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
+                        </div>
+
+                        <div>
+                            <label for="startX" class="block text-sm font-medium text-gray-700">Start X (Columna inicial)</label>
+                            <input type="number" id="startX" value="0" min="0" max="7" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
+                        </div>
+
+                        <div>
+                            <label for="startY" class="block text-sm font-medium text-gray-700">Start Y (Renglon inicial)</label>
+                            <input type="number" id="startY" value="0" min="0" max="7" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
+                        </div>
+
+                        <button id="solveButton" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
+                            Solve
+                        </button>
                     </div>
 
-                    <div>
-                        <label for="startX" class="block text-sm font-medium text-gray-700">Start X (Columna inicial)</label>
-                        <input type="number" id="startX" value="0" min="0" max="7" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
-                    </div>
+                    <div id="statusMessage" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
 
-                    <div>
-                        <label for="startY" class="block text-sm font-medium text-gray-700">Start Y (Renglon inicial)</label>
-                        <input type="number" id="startY" value="0" min="0" max="7" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm p-2 border focus:border-blue-500 focus:ring-blue-500" required>
+                    <div id="stepControls" class="mt-6 border-t pt-4 hidden">
+                        <h3 class="text-xl font-bold mb-3 text-gray-800">Step-by-Step Visualization</h3>
+                        <p id="stepInfo" class="text-lg font-mono text-blue-600 mb-3">Step: 0 / 64</p>
+                        <button id="nextButton" class="w-full px-4 py-3 bg-indigo-500 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-600 transition duration-150 disabled:bg-gray-400">
+                            Next Step (→)
+                        </button>
                     </div>
+                </div>
 
-                    <button id="solveButton" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
-                        Solve
+                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4">Solution</h2>
+                    <div id="chessboardContainer" class="flex justify-center items-center">
+                        <div id="chessboard" class="chessboard-grid aspect-square w-full">
+                            <p class="text-gray-500 text-center p-8">Enter settings and click "Solve" to begin. (Ingresa la configuracion y dar click a "Solve")</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="puzzle-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
+                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Puzzle Settings</h2>
+                    <button id="solve-puzzle" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
+                        Solve Puzzle
                     </button>
-                </div>
+                    <div id="status-puzzle" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
 
-                <div id="statusMessage" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
-
-                <div id="stepControls" class="mt-6 border-t pt-4 hidden">
-                    <h3 class="text-xl font-bold mb-3 text-gray-800">Step-by-Step Visualization</h3>
-                    <p id="stepInfo" class="text-lg font-mono text-blue-600 mb-3">Step: 0 / 64</p>
-                    <button id="nextButton" class="w-full px-4 py-3 bg-indigo-500 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-600 transition duration-150 disabled:bg-gray-400">
-                        Next Step (→)
-                    </button>
-                </div>
-            </div>
-
-            <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl">
-                <h2 class="text-2xl font-bold text-gray-800 mb-4">Solution</h2>
-                <div id="chessboardContainer" class="flex justify-center items-center">
-                    <div id="chessboard" class="chessboard-grid aspect-square w-full">
-                        <p class="text-gray-500 text-center p-8">Enter settings and click "Solve" to begin. (Ingresa la configuracion y dar click a "Solve")</p>
+                    <div id="puzzleControls" class="mt-6 border-t pt-4 hidden">
+                        <h3 class="text-xl font-bold mb-3 text-gray-800">Step-by-Step Visualization</h3>
+                        <p id="puzzleInfo" class="text-lg font-mono text-blue-600 mb-3">Step: 0 / 64</p>
+                        <button id="puzzleNext" class="w-full px-4 py-3 bg-indigo-500 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-600 transition duration-150 disabled:bg-gray-400">
+                            Next Step (→)
+                        </button>
                     </div>
                 </div>
-            </div>
+                
+                <!--Solution space-->
+                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex flex-col space-y-4">
+                </div>
+            </section>
+
+            <section id="maze-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
+                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Maze Settings</h2>
+                    <textarea id="maze-input" class="w-full h-64 border rounded-lg p-2 resize-none" placeholder="Ingresar el contenido de texto aqui"></textarea>
+                    <button id="solve-maze" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
+                        Solve Maze
+                    </button>
+                    <div id="status-maze" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
+                </div>
+                
+                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex flex-col space-y-4">
+                    <div class="flex-1">
+                        <h2 class="text-2xl font-bold text-gray-800 mb-4">Maze Map</h2>
+                        <div id="maze-map" class="border border-gray-300 rounded-lg p-4 aspect-square">
+                        </div>
+                    </div>
+                    <div class="flex-1">
+                        <h2 class="text-2xl font-bold text-gray-800 mb-4">Results List</h2>
+                        <div id="maze-results" class="border border-gray-300 rounded-lg p-4 h-full overflow-y-auto">
+                        </div>
+                    </div>
+                </div>
+            </section>
 
         </main>
     </div>
