--- a/index.html
+++ b/index.html
@@ -72,26 +72,62 @@
             </section>
 
             <section id="puzzle-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
-                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Puzzle Settings</h2>
-                    <button id="solve-puzzle" class="w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
-                        Solve Puzzle
-                    </button>
-                    <div id="status-puzzle" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
+            <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
+                <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">Puzzle Settings</h2>
 
-                    <div id="puzzleControls" class="mt-6 border-t pt-4 hidden">
-                        <h3 class="text-xl font-bold mb-3 text-gray-800">Step-by-Step Visualization</h3>
-                        <p id="puzzleInfo" class="text-lg font-mono text-blue-600 mb-3">Step: 0 / 64</p>
-                        <button id="puzzleNext" class="w-full px-4 py-3 bg-indigo-500 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-600 transition duration-150 disabled:bg-gray-400">
-                            Next Step (→)
-                        </button>
-                    </div>
+                <label class="block text-sm font-medium text-gray-700 mb-2">Estados (3x3) – Inicial y Objetivo</label>
+                <textarea id="puzzle-input" class="w-full h-44 border rounded-lg p-2 font-mono text-sm resize-none"
+            placeholder="Ejemplo:
+            2 0 3
+            1 8 4
+            7 6 5
+            1 2 3
+            8 0 4
+            7 6 5"></textarea>
+
+                <button id="solve-puzzle" class="mt-3 w-full px-4 py-3 bg-green-500 text-white font-bold rounded-lg shadow-lg hover:bg-green-600 transition duration-150 disabled:bg-gray-400">
+                Solve Puzzle
+                </button>
+
+                <div id="status-puzzle" class="mt-4 p-3 rounded-lg text-sm font-medium text-center hidden"></div>
+
+                <div id="puzzleControls" class="mt-6 border-t pt-4 hidden">
+                <h3 class="text-xl font-bold mb-3 text-gray-800">Step-by-Step Visualization</h3>
+                <p id="puzzleInfo" class="text-lg font-mono text-blue-600 mb-3">Step: 0 / 0</p>
+                <div class="flex gap-2">
+                    <button id="puzzlePrev" class="flex-1 px-4 py-3 bg-gray-200 text-gray-800 font-bold rounded-lg hover:bg-gray-300 transition disabled:bg-gray-100 disabled:text-gray-400">Prev (←)</button>
+                    <button id="puzzleNext" class="flex-1 px-4 py-3 bg-indigo-500 text-white font-bold rounded-lg shadow-lg hover:bg-indigo-600 transition duration-150 disabled:bg-gray-400">
+                    Next (→)
+                    </button>
                 </div>
-                
-                <!--Solution space-->
-                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex flex-col space-y-4">
                 </div>
+            </div>
+
+            <!--Solution space-->
+            <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex flex-col space-y-4">
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                <div>
+                    <h2 class="text-xl font-bold text-gray-800 mb-2">Estado Actual</h2>
+                    <div id="puzzle-current" class="puzzle-grid"></div>
+                </div>
+                <div>
+                    <h2 class="text-xl font-bold text-gray-800 mb-2">Estado Objetivo</h2>
+                    <div id="puzzle-goal" class="puzzle-grid"></div>
+                </div>
+                </div>
+
+                <div>
+                <h2 class="text-xl font-bold text-gray-800 mb-2">Jugadas</h2>
+                <div id="puzzle-moves" class="p-3 rounded-lg bg-gray-50 border text-sm font-mono overflow-x-auto"></div>
+                </div>
+
+                <div>
+                <h2 class="text-xl font-bold text-gray-800 mb-2">Ruta (claves)</h2>
+                <div id="puzzle-route" class="p-3 rounded-lg bg-gray-50 border text-xs font-mono max-h-56 overflow-y-auto"></div>
+                </div>
+            </div>
             </section>
+
 
             <section id="maze-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
                 <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
