--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <button id="maze-btn" class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150"> 
                 Maze 
             </button> 
+            <button id="digit-btn" class="px-4 py-2 bg-gray-200 text-gray-700 font-semibold rounded-lg shadow-md hover:bg-gray-300 transition duration-150"> 
+                Reconocimiento de Números
+            </button>
             </div>
         </header>
 
@@ -152,6 +155,38 @@
                     </div>
                 </div>
             </section>
+
+            <section id="digit-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
+                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
+                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">
+                        Dibuja un número (0-9)!
+                    </h2>
+
+                    <canvas id="digit-canvas" width="280" height="280" 
+                        class="border border-gray-400 rounded-lg bg-white cursor-crosshair"></canvas>
+
+                    <div class="mt-4 flex gap-3">
+                        <button id="predict-digit" class="flex-1 px-4 py-3 bg-blue-600 text-white font-bold rounded-lg shadow-lg hover:bg-blue-700">
+                            Predecir
+                        </button>
+                        <button id="clear-canvas" class="flex-1 px-4 py-3 bg-gray-200 text-gray-800 font-bold rounded-lg hover:bg-gray-300">
+                            Limpiar
+                        </button>
+                    </div>
+
+                    <div id="digit-result" class="mt-4 p-3 bg-gray-100 border rounded-lg text-center text-xl font-bold text-gray-800 hidden">
+                        Resultado: <span id="digit-output">?</span>
+                    </div>
+                </div>
+
+                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex justify-center items-center">
+                    <p class="text-gray-500 text-center text-lg">
+                        Dibuja un número en el canvas y presiona <strong>Predecir</strong>.<br>
+                        El modelo MNIST lo enviará a tu API en Render.
+                    </p>
+                </div>
+            </section>
+
 
         </main>
     </div>
