--- a/index.html
+++ b/index.html
@@ -156,33 +156,32 @@
                 </div>
             </section>
 
-            <section id="digit-section" class="problem-section hidden flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-6">
-                <div class="lg:w-1/3 bg-white p-6 shadow-lg rounded-xl h-fit">
-                    <h2 class="text-2xl font-bold text-gray-800 mb-4 border-b pb-2">
-                        Dibuja un número (0-9)!
+            <section id="digit-section" class="problem-section hidden w-full flex justify-center items-center mt-6 mb-12">
+                <div class="bg-white p-6 shadow-xl rounded-2xl w-full max-w-md flex flex-col items-center border border-gray-100 mx-auto">
+                    
+                    <h2 class="text-2xl font-bold text-gray-800 mb-5 w-full text-center">
+                        ¡Dibuja un número!
                     </h2>
 
-                    <canvas id="digit-canvas" width="280" height="280" 
-                        class="border border-gray-400 rounded-lg bg-white cursor-crosshair"></canvas>
+                    <canvas id="digit-canvas" width="300" height="300" 
+                        class="border-4 border-gray-200 rounded-xl bg-white cursor-crosshair shadow-inner touch-none">
+                    </canvas>
 
-                    <div class="mt-4 flex gap-3">
-                        <button id="predict-digit" class="flex-1 px-4 py-3 bg-blue-600 text-white font-bold rounded-lg shadow-lg hover:bg-blue-700">
+                    <div class="mt-6 flex gap-3 w-full">
+                        <button id="predict-digit" class="flex-1 px-4 py-3 bg-blue-600 text-white font-bold rounded-lg hover:bg-blue-700 transition shadow-md hover:shadow-lg transform hover:-translate-y-0.5">
                             Predecir
                         </button>
-                        <button id="clear-canvas" class="flex-1 px-4 py-3 bg-gray-200 text-gray-800 font-bold rounded-lg hover:bg-gray-300">
-                            Limpiar
+                        <button id="clear-canvas" class="flex-1 px-4 py-3 bg-gray-100 text-gray-700 font-bold rounded-lg hover:bg-gray-200 transition border border-gray-300">
+                            Borrar
                         </button>
                     </div>
 
-                    <div id="digit-result" class="mt-4 p-3 bg-gray-100 border rounded-lg text-center text-xl font-bold text-gray-800 hidden">
-                        Resultado: <span id="digit-output">?</span>
+                    <div id="digit-result" class="mt-4 w-full p-3 bg-indigo-50 border border-indigo-100 rounded-lg text-center text-xl font-bold text-indigo-900 hidden">
+                        Es un: <span id="digit-output" class="text-3xl ml-2">?</span>
                     </div>
-                </div>
 
-                <div class="lg:w-2/3 bg-white p-6 shadow-lg rounded-xl flex justify-center items-center">
-                    <p class="text-gray-500 text-center text-lg">
-                        Dibuja un número en el canvas y presiona <strong>Predecir</strong>.<br>
-                        El modelo MNIST lo enviará a tu API en Render.
+                    <p class="mt-4 text-sm text-gray-400 text-center">
+                        Dibuja un dígito del 0 al 9 en el recuadro.
                     </p>
                 </div>
             </section>
