Added the digit logic here and responsive fixes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="w-full max-w-5xl">
         <header class="mb-8 p-4 bg-white shadow-lg rounded-xl">
             <h1 class="text-3xl font-extrabold text-gray-800 mb-4">AI Problems</h1>
-            <div class="flex space-x-4">
+            <div class="flex flex-wrap justify-center gap-2">
             <button id="knight-tour-btn" class="px-4 py-2 bg-blue-600 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 transition duration-150"> 
                 Knight Tour (Salto de Caballo) 
             </button> 
@@ -164,7 +164,7 @@
                     </h2>
 
                     <canvas id="digit-canvas" width="300" height="300" 
-                        class="border-4 border-gray-200 rounded-xl bg-white cursor-crosshair shadow-inner touch-none">
+                        class="border-4 border-gray-200 rounded-xl bg-white cursor-crosshair shadow-inner touch-none w-full max-w-[300px] h-auto">
                     </canvas>
 
                     <div class="mt-6 flex gap-3 w-full">
